htdocs/wp-content/themes/ihh/resources/assets/styles/common/_global.scss
img {
  max-width: 100%;
}

.container-wide {
  max-width: 1440px;
  padding-right: $grid-gutter-width / 2;
  padding-left: $grid-gutter-width / 2;
  margin-right: auto;
  margin-left: auto;
}

body {
  @include media-breakpoint-down("sm") {
    * {
      word-break: break-word;
    }
  }
}

a[target="_blank"]::before {
  content: "\f08e";
  font-family: FontAwesome, sans-serif;
  margin: 0 5px 0 3px;
}

a.no-blank-icon::before {
  content: "";
  margin: 0;
}

.ihh-visually-hidden {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  padding: 0;
  margin: 0;
  overflow: hidden;
  clip: rect(1px 1px 1px 1px);
  clip: rect(1px, 1px, 1px, 1px);
  white-space: nowrap;
}

main p a {
  color: #00e !important;
  text-decoration: underline !important;

  &:hover {
    text-decoration: none !important;
  }
}

